# cengine

./: .gitignore  CMakeLists.txt  build.bat  compile_commands.json
assets/shaders/: basic.fglsl  basic.vglsl  colorpick_frag.glsl  colorpick_vert.glsl
lib/glad/glad/: gl.h
src/: asset.hpp  camera.cpp  camera.hpp  collada.cpp  collada.hpp  main.cpp  mesh.hpp  modelasset.cpp  modelasset.hpp  rendercontext.cpp  rendercontext.hpp  shader.cpp  shader.hpp
